[gd_scene load_steps=6 format=3 uid="uid://dc5to2oqfq8st"]

[ext_resource type="Shader" path="res://scenes/menus/pause_menu.gdshader" id="1_02m0t"]
[ext_resource type="Script" path="res://scripts/score_board.gd" id="1_v7gy2"]
[ext_resource type="FontFile" uid="uid://by6oaaomws3g4" path="res://resources/fonts/Orbitron-VariableFont.ttf" id="3_4q3i6"]
[ext_resource type="AudioStream" uid="uid://cgdtaq7plubdr" path="res://resources/soundFX/scoreUpdateBell.wav" id="3_rorl1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7rskl"]
shader = ExtResource("1_02m0t")
shader_parameter/amount = 3.0

[node name="scoreBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v7gy2")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_7rskl")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="enemyScore" type="Label" parent="."]
layout_mode = 2
offset_left = 128.0
offset_top = 165.0
offset_right = 486.0
offset_bottom = 487.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_4q3i6")
theme_override_font_sizes/font_size = 256
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="dashLabel" type="Label" parent="."]
layout_mode = 2
offset_top = -13.0
offset_right = 1152.0
offset_bottom = 643.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_4q3i6")
theme_override_font_sizes/font_size = 256
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="playerScore" type="Label" parent="."]
layout_mode = 2
offset_left = 664.0
offset_top = 165.0
offset_right = 878.0
offset_bottom = 487.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_4q3i6")
theme_override_font_sizes/font_size = 256
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="updateTimer" type="Timer" parent="."]
one_shot = true

[node name="updateScoreBell" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rorl1")
volume_db = 3.0

[connection signal="timeout" from="updateTimer" to="." method="_on_update_timer_timeout"]
